public/css/social.css
body, html {
    background-color: #f5f8fa;
}
.section.main {
  background-color: #f5f8fa;
}
.card-header {
    background-image: url("http://placehold.it/600x200");
    background-position: 0 50%;
    background-size: 100% auto;
    border-bottom: 1px solid #e1e8ed;
    border-radius: 4px 4px 0 0;
    height: 95px;
    width: 100%;
}
.card-content {
    padding: 0px;
}
.card-avatar {
  background-color: #fff;
  border-radius: 6px;
  display: inline-block !important;
  float: left;
  margin: -30px 5px 0 8px;
  max-width: 100%;
  padding: 1px;
  vertical-align: bottom;
}
.card-avatar-img {
  border: 2px solid #fff;
  border-radius: 7px;
  box-sizing: border-box;
  color: #fff;
  height: 72px;
  width: 72px;
}
.card-user {
    margin: 5px 0 0;
}
.card-user-name{
    font-size: 18px;
    font-weight: 700;
    line-height: 21px;
}
.card-user-name a{
    color: inherit !important;
}
.card-stats {
    margin-left: 11px;
    padding: 10px 0;
}
.card-stats-list {
    box-sizing: border-box;
    display: table;
    margin: 0;
    min-width: 100%;
    padding: 0;
    table-layout: auto;
}
ul.card-stats-list {
    list-style: outside none none;
    margin: 0;
    padding: 0;
}
.card-stats-item {
    display: table-cell;
    padding: 0;
    vertical-align: top;
}
.card-stats-item a:hover {
    text-decoration: none;
}
.card-stats-val {
    display: block;
    font-size: 18px;
    font-weight: 500;
    transition: color 0.15s ease-in-out 0s;
}
.card-stats-key {
    color: #8899a6;
    font-size: 10px;
    letter-spacing: 0.02em;
    overflow: hidden;
    text-transform: uppercase;
    transition: color 0.15s ease-in-out 0s;
}
.spacer {
  height:20px;
}

.trending .trend-title {
  padding-bottom: 10px;
}

.trending .trend-hashtag {
  padding-bottom: 8px;
}

.box:not(:last-child), .content:not(:last-child) {
    margin-top: 0;
    margin-bottom: 0;
}

.stream-item.expanded.box {
  margin: 20px 0;
}

.rendered {
  padding: 0;
  margin: 0;
}
.content blockquote:not(:last-child), .content ol:not(:last-child), .content p:not(:last-child), .content table:not(:last-child), .content ul:not(:last-child) {
    margin-bottom: 0;
}
.stream-item.expanded.box .rendered{
  font-size:25px;
  line-height: 1.1;
  padding: 15px 0;
}

.replybar.hidden {
  display: none;
}

